# openenv-email-triage

./: Dockerfile  README.md  __init__.py  app.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
